modif System1 and co